# Tetro

./: ALLEGRO.CFG  CMakeLists.txt  README.TXT  README.md
assets/: Attribution.txt
assets/GFX/: GAMEUI.jsn
include/: BaseState.h  GameConstants.h  GameContext.h  GameOverState.h  GameProcessor.h  GameState.h  GameUIDefines.h  Tetromino.h  TitleState.h
src/: GameContext.cpp  GameOverState.cpp  GameProcessor.cpp  GameState.cpp  Tetromino.cpp  TitleState.cpp  main.cpp
